--- a/MegaCOM/res/values/colors.xml
+++ b/MegaCOM/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="background_secondary">#eeeeee</color>
     <color name="mega">#db0605</color>
     <color name="text_login">#333333</color>
+    <color name="used_space_OK">#1ea4e3</color>
+    <color name="color_mail_navigation_drawer">#858585</color>
 </resources>
