File list  (static data) First attemp for the new file list. Basic custom adapter implemented Static data: ten image files (to see that scrolling works)

--- a/MegaCOM/res/layout/fragment_filebrowserlist.xml
+++ b/MegaCOM/res/layout/fragment_filebrowserlist.xml
@@ -4,7 +4,13 @@
     android:layout_height="match_parent"
     tools:context=".FileBrowserListFragment" >
 
-    <TextView
+    <ListView
+        android:id="@+id/file_list_view_browser"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+    </ListView>
+    
+<!--     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -28,5 +34,5 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="28dp"
         android:text="@string/botonOcultarActionBar" />
-
+-->
 </RelativeLayout>
