File list view Completed GUI file listView (included ImageButton) To-do: implement onClick(ImageButton) and onClickItem (ListView)

--- a/MegaCOM/res/values/colors.xml
+++ b/MegaCOM/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="navigation_drawer_text">#d2d2d2</color>
     <color name="navigation_drawer_background">#333333</color>
     <color name="navigation_drawer_divider">#555555</color>
+    <color name="file_list_second_row">#848484</color>
 </resources>
