--- a/MegaCOM/res/layout/activity_login.xml
+++ b/MegaCOM/res/layout/activity_login.xml
@@ -55,8 +55,17 @@
        		    android:layout_gravity="center" >
        		 	
 		        <TableRow>
-		            <TextView 
-       			 	android:id="@+id/ABC"
+		            <ImageView
+		                android:id="@+id/login_three_dots"
+		                android:layout_width="wrap_content"
+		                android:layout_height="wrap_content"
+		                android:src="@drawable/three_dots" 
+		                android:layout_gravity="center_vertical|center_horizontal" 
+		                android:paddingRight="5dp"
+		                android:layout_marginBottom="4dp"/>
+		            
+		            <!-- <TextView 
+       			 	android:id="@+id/points"
        			 	android:layout_width="wrap_content"
        			 	android:layout_height="wrap_content"
        			 	android:text="@string/dots" 
@@ -66,14 +75,14 @@
 			        android:layout_marginTop="0dp" 
 			        android:textColor="@color/text_login"
 			        />		
-       			 
+       			  -->
 		            <com.mega.MySwitch
 			        android:id="@+id/switch_login"
 			        style="@style/mySwitchStyle"
 			        android:layout_width="wrap_content"
 			        android:layout_height="wrap_content"
 			        android:layout_marginBottom="0dp"
-			        android:layout_marginRight="3dp"
+			        android:layout_marginRight="4dp"
 			        android:layout_marginTop="8dp"
 			        android:layout_marginLeft="1dp"
 			        android:layout_gravity="center_vertical|center_horizontal"
@@ -84,7 +93,7 @@
 			        mySwitch:track="@drawable/switch_track" />
 		            
 		            <TextView 
-       			 	android:id="@+id/points"
+       			 	android:id="@+id/ABC"
        			 	android:layout_width="wrap_content"
        			 	android:layout_height="wrap_content"
        			 	android:textSize="16sp"  
