--- a/MegaCOM/res/layout/item_file_list.xml
+++ b/MegaCOM/res/layout/item_file_list.xml
@@ -1,18 +1,63 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:descendantFocusability="blocksDescendants" >
     
     <ImageView
         android:id="@+id/file_list_thumbnail"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginLeft="5dp" />
+        android:layout_marginLeft="5dp" 
+        android:scaleType="fitCenter" />
     
     <TextView
-        android:id="@+id/file_list_text"
+        android:id="@+id/file_list_filename"
         android:layout_width="fill_parent"
-        android:layout_height="40dip"
+        android:layout_height="30dp"
         android:layout_toRightOf="@id/file_list_thumbnail"
         android:paddingLeft="5dp"
-        android:paddingTop="5dp" />
+        android:paddingTop="7dp" />
+    
+    <TextView
+        android:id="@+id/file_list_filesize"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_toRightOf="@id/file_list_thumbnail"
+        android:layout_below="@+id/file_list_filename"
+        android:paddingLeft="5dp"
+        android:paddingBottom="7dp"
+        android:textColor="@color/file_list_second_row" />
+    
+    <ImageView 
+        android:id="@+id/file_list_one_dot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/dot"
+        android:layout_toRightOf="@id/file_list_filesize"
+        android:layout_alignTop="@id/file_list_filesize"
+        android:paddingTop="7dp"
+        android:paddingLeft="5dp" />
+    
+    <TextView
+        android:id="@+id/file_list_updated"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_toRightOf="@id/file_list_one_dot"
+        android:layout_below="@+id/file_list_filename"
+        android:paddingLeft="5dp"
+        android:paddingBottom="7dp"
+        android:textColor="@color/file_list_second_row" />
+    
+    <ImageButton 
+        android:id="@+id/file_list_three_dots"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/three_dots"
+        android:background="@null"
+        android:layout_toRightOf="@id/file_list_updated"
+        android:layout_alignTop="@id/file_list_filename"
+        android:layout_alignParentRight="true"
+		android:paddingTop="30dp"
+        android:paddingLeft="5dp" />
+    
 </RelativeLayout>
