File properties GUI Added file properties fragment. Next step: List options expanded To-do: ORIENTATION CHANGES ARE NOT YET IMPLEMENTED

--- a/MegaCOM/res/layout/activity_login.xml
+++ b/MegaCOM/res/layout/activity_login.xml
@@ -76,7 +76,7 @@
 			        android:textColor="@color/text_login"
 			        />		
        			  -->
-		            <com.mega.MySwitch
+		            <com.mega.components.MySwitch
 			        android:id="@+id/switch_login"
 			        style="@style/mySwitchStyle"
 			        android:layout_width="wrap_content"
