--- a/MegaCOM/res/values/attrs.xml
+++ b/MegaCOM/res/values/attrs.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    
+    <declare-styleable name="RoundedImageView">
+        <attr name="corner_radius" format="dimension" />
+        <attr name="border_width" format="dimension" />
+        <attr name="border_color" format="color" />
+        <attr name="round_background" format="boolean" />
+        <attr name="is_oval" format="boolean" />
+        <attr name="android:scaleType" />
+    </declare-styleable>
 
     <declare-styleable name="MySwitch">
         <!-- Drawable to use as the "thumb" that switches back and forth. -->
