--- a/MegaCOM/res/menu/activity_manager.xml
+++ b/MegaCOM/res/menu/activity_manager.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:showAsAction="never"
+        android:showAsAction="always"
         android:title="@string/action_settings"
         android:icon="@drawable/ic_launcher"
         MEGA:showAsAction="ifRoom"
