--- a/MegaCOM/res/values/colors.xml
+++ b/MegaCOM/res/values/colors.xml
@@ -13,4 +13,9 @@
     <color name="navigation_drawer_background">#333333</color>
     <color name="navigation_drawer_divider">#555555</color>
     <color name="file_list_second_row">#848484</color>
+    <color name="border_file_properties">#cccccc</color>
+    <color name="file_properties_available_layout">#eeeeee</color>
+    <color name="file_properties_text_available">#666666</color>
+    <color name="file_properties_info_menu">#404040</color>
+    <color name="file_properties_info_data">#999999</color>
 </resources>
