--- a/MegaCOM/res/layout/activity_login.xml
+++ b/MegaCOM/res/layout/activity_login.xml
@@ -59,7 +59,7 @@
 		                android:id="@+id/login_three_dots"
 		                android:layout_width="wrap_content"
 		                android:layout_height="wrap_content"
-		                android:src="@drawable/three_dots" 
+		                android:src="@drawable/three_dots_background_white" 
 		                android:layout_gravity="center_vertical|center_horizontal" 
 		                android:paddingRight="5dp"
 		                android:layout_marginBottom="4dp"/>
