--- a/MegaCOM/res/menu/activity_manager.xml
+++ b/MegaCOM/res/menu/activity_manager.xml
@@ -1,6 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:MEGA="http://schemas.android.com/apk/res-auto" >
     
+    <item android:id="@+id/action_search"
+          android:title="@string/action_search"
+          android:icon="@drawable/ic_menu_action_search"
+          MEGA:showAsAction="ifRoom|collapseActionView"
+          MEGA:actionViewClass="android.support.v7.widget.SearchView" />
+    
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
